added right bar

--- a/newtab.html
+++ b/newtab.html
@@ -4,10 +4,15 @@
 <meta charset="utf-8" />
 <title>New Tab</title>
 <link rel="stylesheet" href="newtab.css">
+<link rel="stylesheet" type="text/css" href="jquery.slidepanel.css">
 </head>
 <body>
 <div id="main">
 </div>
+
+<a href="external.html" data-slidepanel="panel">Show Panel</a>
+
+
 <a id="options_button" href="#options" title="Options"></a>
 <div id="options">
 	<a id="options_close_button" href="#" title="Close">&times;</a>
@@ -145,7 +150,7 @@
 
 
 <script src="jquery-2.0.0.min.js"></script>
-
+<script type="text/javascript" src="jquery.slidepanel.js"></script>
 <script src="newtab.js"></script>
 
 </body>
