--- a/newtab.html
+++ b/newtab.html
@@ -10,10 +10,10 @@
 <div id="main">
 </div>
 
-<a href="external.html" data-slidepanel="panel">Show Panel</a>
-
 
 <a id="options_button" href="#options" title="Options"></a>
+<a id="todo_button" href="todo.html" data-slidepanel="panel"><img src="resources/todo.png"></a>
+
 <div id="options">
 	<a id="options_close_button" href="#" title="Close">&times;</a>
 	<ul id="options_nav">
