--- a/newtab.html
+++ b/newtab.html
@@ -28,7 +28,12 @@
 
 <a id="options_button" href="#options" title="Options"></a>
 <a id="todo_button"><img src="resources/todo.png"></a>
-<div id="fileDisplayArea"></div>
+<div id="fileDisplayArea">
+	<h1 id="eventTitle">Today in History</h1>
+	<ul id="eventsList">
+
+	</ul>
+</div>
 
 
 <div id="options">
